error.log
    Checking kartana v0.1.0 (C:\Projects\PersonalProjects\kartana)
error[E0382]: use of moved value: `file_path`
  --> src\editor_page.rs:44:23
   |
22 |     let file_path = {
   |         --------- move occurs because `file_path` has type `{closure@src\editor_page.rs:25:9: 25:16}`, which does not implement the `Copy` trait
...
34 |     use_effect(move || {
   |                ------- value moved into closure here
35 |         let path = file_path();
   |                    --------- variable moved due to use in closure
...
44 |     let handle_save = move |_| {
   |                       ^^^^^^^^ value used here after move
...
54 |         let path = file_path();
   |                    --------- use occurs due to use in closure

For more information about this error, try `rustc --explain E0382`.
error: could not compile `kartana` (bin "kartana") due to 1 previous error
